@@ -5,4 +5,6 @@
             :url "http://www.eclipse.org/legal/epl-v10.html"}
   :dependencies [[org.clojure/clojure "1.6.0-beta1"]
                  [org.clojure/math.combinatorics "0.0.7"]
-                 [potemkin "0.3.4"]])
+                 [potemkin "0.3.4"]]
+  ; "-verbose:gc" "-XX:+PrintGCDetails"
+  :jvm-opts ["-Xmx32g" "-XX:+UseConcMarkSweepGC" "-XX:+UseParNewGC" "-XX:+CMSParallelRemarkEnabled" "-XX:+AggressiveOpts" "-XX:+UseFastAccessorMethods" "-XX:+UseCompressedOops"])
